--- a/static/styles/lobby.css
+++ b/static/styles/lobby.css
@@ -7,7 +7,7 @@
     border-radius: 20px;
     border: 1px solid  rgba(255, 255, 255, 0.1);
     background: rgba(255, 255, 255, 0.06);
-    flex-shrink: 1;
+    flex: 1;
     min-height: 0;
     overflow-y: auto;
 }
